# gthumb-openexr-extension

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  openexr-viewer.extension.in
.github/workflows/: blank.yml  build.yml  cmake.yml
config/: configure_3-10.ac  configure_3-4.ac  configure_3-5.ac  configure_3-6.ac  configure_3-7.ac  configure_3-8.ac  configure_3-9.ac  openexr_viewer.extension_3-10.in.in  openexr_viewer.extension_3-4.in.in  openexr_viewer.extension_3-5.in.in  openexr_viewer.extension_3-6.in.in  openexr_viewer.extension_3-7.in.in  openexr_viewer.extension_3-8.in.in  openexr_viewer.extension_3-9.in.in
extension/: ExrLoader.cpp  ExrLoader.h  main.c  meson.build  openexr_viewer.extension.in.in
gthumb/: README.md
gthumb/gthumb/: meson.build
package/ubuntu/: make.sh
package/ubuntu/debian/: changelog  control  copyright  rules
po/: POTFILES.in
src/: ExrLoader.cpp  ExrLoader.h  Makefile.am  main.c  openexr_viewer.extension.in.in
